crates/core/build.log
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `digest`
  --> crates/core/src/crypto.rs:21:32
   |
21 | type SignatureHasher = Blake2s<digest::consts::U32>;
   |                                ^^^^^^ use of unresolved module or unlinked crate `digest`
   |
   = help: if you wanted to use a crate named `digest`, use `cargo add digest` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `digest`
   --> crates/core/src/crypto.rs:115:36
    |
115 |         let mut hasher = Blake2s::<digest::consts::U16>::new();
    |                                    ^^^^^^ use of unresolved module or unlinked crate `digest`
    |
    = help: if you wanted to use a crate named `digest`, use `cargo add digest` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `digest`
   --> crates/core/src/crypto.rs:129:24
    |
129 | pub struct PeerId([u8; digest::consts::U16::INT]);
    |                        ^^^^^^ use of unresolved module or unlinked crate `digest`
    |
    = help: if you wanted to use a crate named `digest`, use `cargo add digest` to add it to your `Cargo.toml`
help: there is an enum variant `serde::__private::de::Content::U16`; try using the variant's enum
    |
129 - pub struct PeerId([u8; digest::consts::U16::INT]);
129 + pub struct PeerId([u8; serde::__private::de::Content::INT]);
    |

error[E0412]: cannot find type `PeerID` in this scope
   --> crates/core/src/game_state.rs:54:21
    |
54  |     fn new(peer_id: PeerID, nickname: String, chips: Chips) -> Player {
    |                     ^^^^^^ help: a struct with a similar name exists: `PeerId`
    |
   ::: crates/core/src/crypto.rs:129:1
    |
129 | pub struct PeerId([u8; digest::consts::U16::INT]);
    | -------------------------------------------------- similarly named struct `PeerId` defined here

error[E0412]: cannot find type `PeerID` in this scope
   --> crates/core/src/game_state.rs:125:14
    |
125 |     peer_id: PeerID,
    |              ^^^^^^ help: a struct with a similar name exists: `PeerId`
    |
   ::: crates/core/src/crypto.rs:129:1
    |
129 | pub struct PeerId([u8; digest::consts::U16::INT]);
    | -------------------------------------------------- similarly named struct `PeerId` defined here

